# src/controllers/handlers/upsert-player-storage.ts
@@ -1,11 +1,12 @@
+import { EthAddress } from '@dcl/schemas'
 import { InvalidRequestError, errorMessageOrDefault, isInvalidRequestError } from '../../utils/errors'
 import type { UpsertStorageBody } from './schemas'
 import type { HandlerContextWithPath, WorldStorageContext } from '../../types'
 import type { HTTPResponse } from '../../types/http'
 
-export async function upsertWorldStorageHandler(
+export async function upsertPlayerStorageHandler(
   context: Pick<
-    HandlerContextWithPath<'logs' | 'worldStorage', '/values/:key'>,
+    HandlerContextWithPath<'logs' | 'playerStorage', '/players/:player_address/values/:key'>,
     'url' | 'components' | 'params' | 'request'
   > &
     WorldStorageContext
@@ -14,26 +15,32 @@ export async function upsertWorldStorageHandler(
     request,
     params,
     worldName,
-    components: { logs, worldStorage }
+    components: { logs, playerStorage }
   } = context
 
-  const logger = logs.getLogger('upsert-world-storage-handler')
+  const logger = logs.getLogger('upsert-player-storage-handler')
 
   try {
+    const playerAddress = params.player_address.toLowerCase()
     const key = params.key
 
-    if (!worldName || !key) {
-      throw new InvalidRequestError('World name and key are required')
+    if (!EthAddress.validate(playerAddress)) {
+      throw new InvalidRequestError('Invalid player address')
+    }
+
+    if (!worldName || !playerAddress || !key) {
+      throw new InvalidRequestError('World name, player address, and key are required')
     }
 
     const { value }: UpsertStorageBody = await request.json()
 
-    logger.info('Upserting world storage value', {
+    logger.info('Upserting player storage value', {
       worldName,
+      playerAddress,
       key
     })
 
-    const item = await worldStorage.setValue(worldName, key, value)
+    const item = await playerStorage.setValue(worldName, playerAddress, key, value)
     return {
       status: 200,
       body: {
@@ -52,7 +59,7 @@ export async function upsertWorldStorageHandler(
 
     const errorMessage = errorMessageOrDefault(error, 'Unknown error')
 
-    logger.error('Error upserting world storage value', {
+    logger.error('Error upserting player storage value', {
       error: errorMessage
     })
 
